# DCSE

./: .gitattributes  README.md  demo.ipynb  pyproject.toml
configs/: dataset.yaml  training.yaml
data/sequences/: ncbi_16s_rRNA_46b.fasta
dataset_02/: train_labels.tsv
dataset_10/: train_labels.tsv
demo_datasets/: dataset_summary.csv
demo_datasets/dataset_01/: test_labels.tsv  train_labels.tsv
demo_datasets/dataset_02/: test_labels.tsv
demo_datasets/dataset_03/: test_labels.tsv  train_labels.tsv
demo_datasets/dataset_04/: test_labels.tsv  train_labels.tsv
demo_datasets/dataset_05/: test_labels.tsv  train_labels.tsv
demo_datasets/dataset_06/: test_labels.tsv  test_sequences.fasta  train_labels.tsv  train_sequences.fasta
demo_datasets/dataset_07/: test_labels.tsv  train_labels.tsv
demo_datasets/dataset_08/: test_labels.tsv  train_labels.tsv
demo_datasets/dataset_09/: test_labels.tsv  test_sequences.fasta  train_labels.tsv  train_sequences.fasta
demo_datasets/dataset_10/: test_labels.tsv
demo_datasets/dataset_11/: test_labels.tsv  train_labels.tsv
demo_datasets/dataset_12/: test_labels.tsv  train_labels.tsv
scripts/: finalize_datasets.py  generate_labels.py  make_datasets.py
src/dcse/cli/: run.py
src/dcse/dataset/: build_dataset.py  fasta_utils.py  io.py  sampling.py
src/dcse/evaluation/: evaluate.py  plotting.py
src/dcse/labeling/: blast.py  dataset_labeler.py  global_identity.py
src/dcse/model/: model.py
src/dcse/pairing/: graph_pairs.py
src/dcse/postprocessing/: dataset_finalizer.py  hsp_cleaning.py  io.py  splitting.py
(+8 files in other folders)
