[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcse"
version = "0.1.0"
dependencies = [
    "biopython>=1.83",
    "numpy>=1.26",
    "pandas>=2.2",
    "networkx>=3.2",
    "parasail>=1.3",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tensorflow>=2.16"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
dcse = "dcse.cli.run:main"